# FCGF

./: README.md  demo.py  demo_alignment.py  pyproject.toml
docker/: Dockerfile
